--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "mocha $(find test -path '*Spec.js')",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack -p",
     "lint": "eslint src/*.js test/*.js"
   },
   "repository": {
@@ -37,7 +37,7 @@
   "devDependencies": {
     "babel-core": "~6.24.1",
     "babel-eslint": "~7.2.3",
-    "babel-loader": "~7.0.0",
+    "babel-loader": "~7.1.2",
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-stage-2": "~6.24.1",
     "babel-register": "~6.24.1",
@@ -46,9 +46,7 @@
     "eslint": "~3.19.0",
     "jsdom": "~9.9.1",
     "mocha": "~3.4.2",
-    "uglify-js": "~2.8.0",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "~2.6.1"
+    "webpack": "~3.5.6"
   },
   "dependencies": {
     "string-hash": "~1.1.3"
