--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
+	"plugins": [
+		"@babel/plugin-proposal-class-properties"
+	],
 	"presets": [
-  		"env", "stage-2"
+		"@babel/preset-env"
 	]
 }
 
