--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/cli": "~7.2.3",
     "@babel/core": "~7.2.2",
+    "@babel/plugin-proposal-class-properties": "~7.3.0",
     "@babel/preset-env": "~7.3.1",
     "@babel/runtime": "~7.3.1",
     "babel-eslint": "~10.0.1",
