--- a/package.json
+++ b/package.json
@@ -35,22 +35,23 @@
     "resize table columns"
   ],
   "devDependencies": {
-    "@babel/cli": "~7.2.3",
-    "@babel/core": "~7.2.2",
-    "@babel/plugin-proposal-class-properties": "~7.3.0",
-    "@babel/preset-env": "~7.3.1",
-    "@babel/runtime": "~7.3.1",
+    "@babel/cli": "~7.4.4",
+    "@babel/core": "~7.4.5",
+    "@babel/plugin-proposal-class-properties": "~7.4.4",
+    "@babel/preset-env": "~7.4.5",
+    "@babel/register": "~7.4.4",
+    "@babel/runtime": "~7.4.5",
     "babel-eslint": "~10.0.1",
-    "babel-loader": "~8.0.5",
+    "babel-loader": "~8.0.6",
     "chai": "~4.2.0",
     "cross-env": "~5.2.0",
-    "eslint": "^5.13.0",
-    "jsdom": "~13.2.0",
-    "mocha": "~5.2.0",
+    "eslint": "~5.16.0",
+    "jsdom": "~15.1.1",
+    "mocha": "~6.1.4",
     "mocha-chrome": "~2.0.0",
-    "uglifyjs-webpack-plugin": "~2.1.1",
-    "webpack": "~4.29.3",
-    "webpack-cli": "~3.2.3"
+    "uglifyjs-webpack-plugin": "~2.1.3",
+    "webpack": "~4.33.0",
+    "webpack-cli": "~3.3.2"
   },
   "dependencies": {
     "string-hash": "~1.1.3"
