--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "email": "jglynn43@frontiernet.net"
   },
   "scripts": {
-    "test": "mocha-chrome test/sample1.html",
-    "build": "cross-env NODE_ENV=production webpack -p",
-    "lint": "eslint src/*.js test/*.js"
+    "test": "npm run build && mocha-chrome test/sample1.html",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack -p",
+    "lint": "eslint src/*.js test/*.js",
+    "clean": "rimraf dist/*"
   },
   "repository": {
     "type": "git",
@@ -35,23 +36,24 @@
     "resize table columns"
   ],
   "devDependencies": {
-    "@babel/cli": "~7.4.4",
-    "@babel/core": "~7.4.5",
-    "@babel/plugin-proposal-class-properties": "~7.4.4",
-    "@babel/preset-env": "~7.4.5",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "~7.5.4",
+    "@babel/plugin-proposal-class-properties": "~7.5.0",
+    "@babel/preset-env": "~7.5.4",
     "@babel/register": "~7.4.4",
-    "@babel/runtime": "~7.4.5",
-    "babel-eslint": "~10.0.1",
+    "@babel/runtime": "~7.5.4",
+    "babel-eslint": "~10.0.2",
     "babel-loader": "~8.0.6",
     "chai": "~4.2.0",
     "cross-env": "~5.2.0",
-    "eslint": "~5.16.0",
+    "eslint": "~6.0.1",
     "jsdom": "~15.1.1",
     "mocha": "~6.1.4",
     "mocha-chrome": "~2.0.0",
+    "rimraf": "~2.6.3",
     "uglifyjs-webpack-plugin": "~2.1.3",
-    "webpack": "~4.33.0",
-    "webpack-cli": "~3.3.2"
+    "webpack": "^4.35.3",
+    "webpack-cli": "~3.3.6"
   },
   "dependencies": {
     "string-hash": "~1.1.3"
