--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "column-resizer",
-  "version": "1.3.6",
+  "version": "1.3.6-az",
   "description": "Javascript to resize table columns",
   "title": "ColumnResizer",
   "main": "./dist/column-resizer.js",
