--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "column-resizer",
-  "version": "1.3.6-az",
+  "version": "1.3.8-az",
   "description": "Javascript to resize table columns",
   "title": "ColumnResizer",
   "main": "./dist/column-resizer.js",
@@ -12,7 +12,7 @@
     "test": "npm run build && mocha-chrome test/sample1.html",
     "build": "npm run clean && cross-env NODE_ENV=production webpack",
     "lint": "eslint src/*.js test/*.js",
-    "clean": "rimraf dist/*"
+    "clean": ""
   },
   "repository": {
     "type": "git",
